--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden; /* Bloquea el scroll horizontal */
+  width: 100%;
+}
+
+
 .seccion {
     display: flex;
     flex-direction: column;
