--- a/estilo.css
+++ b/estilo.css
@@ -41,10 +41,12 @@ body {
   .contenedor {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 40px;
     width: 100%;
     padding: 20px;
+    
 }
 
 .imagenes {
